...
                tools:layout_editor_absoluteX="500dp"
                tools:layout_editor_absoluteY="16dp" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginTop="104dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
...
                        android:layout_centerHorizontal="true"
                        app:srcCompat="@drawable/certificado" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/vacunatorio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true">

...
