...
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vac1"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
...
